--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,163 +1,186 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="15dp"
     tools:context=".MainActivity">
+    <ImageView
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingLeft="5dp"
+        android:paddingTop="2dp"
+        android:paddingRight="5dp"
+        android:paddingBottom="2dp"
+        android:src="@drawable/rayalarga" />
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_gravity="center_vertical"
+        app:srcCompat="@drawable/quidditch" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:layout_weight="30">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="left"
-            android:layout_weight="50"
-            android:gravity="center_horizontal">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="15">
-
-                    <TextView
-                        android:id="@+id/equipoA"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerHorizontal="true"
-                        android:text="Equipo A"
-                        android:textSize="20sp" />
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="15">
-
-                    <TextView
-                        android:id="@+id/puntuacionA"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerHorizontal="true"
-                        android:text="0"
-                        android:textSize="50sp" />
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="35">
-
-                    <Button
-                        android:id="@+id/diezA"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerHorizontal="true"
-                        android:text="+10 PUNTOS" />
-
-                    <Button
-                        android:id="@+id/cincoA"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/diezA"
-                        android:layout_centerHorizontal="true"
-                        android:text="+5 PUNTOS" />
-
-                    <Button
-                        android:id="@+id/snitchA"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/cincoA"
-                        android:layout_centerHorizontal="true"
-                        android:text="SNITCH DORADA" />
-                </RelativeLayout>
-            </LinearLayout>
-        </RelativeLayout>
-
-        <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="50"
-        android:layout_gravity="right"
-        android:gravity="center_horizontal">
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="5dp"
+        android:orientation="vertical"
+        android:weightSum="1">
 
         <LinearLayout
+            android:id="@+id/MainContainer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            >
+            android:layout_weight=".15"
+            android:orientation="horizontal">
+
             <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="15">
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight=".5"
+                android:orientation="horizontal">
+
                 <TextView
-                    android:id="@+id/equipoB"
+                    android:id="@+id/TextoA"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentTop="false"
+                    android:layout_centerInParent="false"
                     android:layout_centerHorizontal="true"
-                    android:textSize="20sp"
-                    android:text="Equipo A" /></RelativeLayout>
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="15">
+                    android:layout_marginTop="20dp"
+                    android:text="Equipo A" />
+
                 <TextView
-                    android:id="@+id/puntuacionB"
+                    android:id="@+id/PuntosA"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_below="@id/TextoA"
                     android:layout_centerHorizontal="true"
-                    android:textSize="50sp"
-                    android:text="0" /></RelativeLayout>
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="35">
+                    android:layout_marginTop="25dp"
+                    android:textColor="#000"
+                    android:layout_marginBottom="25dp"
+                    android:text="0"
+                    android:textSize="50dp" />
+
                 <Button
-                    android:id="@+id/diezB"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/DiezMasA"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
+                    android:layout_below="@id/PuntosA"
+                    android:layout_marginBottom="15dp"
+                    android:background="#0384fc"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
                     android:text="+10 PUNTOS" />
 
                 <Button
-                    android:id="@+id/cincoB"
+                    android:id="@+id/CincoMasA"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/DiezMasA"
+                    android:layout_marginBottom="15dp"
+                    android:background="#0384fc"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:text="+5 PUNTOS" />
+
+                <Button
+                    android:id="@+id/snitchA"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/CincoMasA"
+                    android:layout_marginBottom="15dp"
+                    android:background="#0384fc"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:text="SNITCH DORADA" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight=".5"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/TexoB"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/diezB"
+                    android:layout_alignParentTop="false"
+                    android:layout_centerInParent="false"
                     android:layout_centerHorizontal="true"
+                    android:layout_marginTop="20dp"
+                    android:text="Equipo B" />
+
+                <TextView
+                    android:id="@+id/PuntosB"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/TexoB"
+                    android:textColor="#000"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginBottom="25dp"
+                    android:text="0"
+                    android:textSize="50dp" />
+
+                <Button
+                    android:id="@+id/DiezMasB"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#0384fc"
+                    android:layout_below="@id/PuntosB"
+                    android:layout_marginBottom="15dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:text="+10 PUNTOS" />
+
+                <Button
+                    android:id="@+id/CincoMasB"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/DiezMasB"
+                    android:layout_marginBottom="15dp"
+                    android:background="#0384fc"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
                     android:text="+5 PUNTOS" />
 
                 <Button
                     android:id="@+id/snitchB"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/cincoB"
-                    android:layout_centerHorizontal="true"
-                    android:text="SNITCH DORADA" /></RelativeLayout>
+                    android:background="#0384fc"
+                    android:layout_below="@id/CincoMasB"
+                    android:layout_marginBottom="15dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:text="SNITCH DORADA" />
+            </RelativeLayout>
         </LinearLayout>
-    </RelativeLayout>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_weight="70">
 
-
-        <Button
-            android:id="@+id/button"
+        <RelativeLayout
+            android:id="@+id/MainButtonContainer"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="RESET" />
+            android:layout_height="match_parent"
+            android:layout_weight=".85"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/Resetear"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center"
+                android:background="#0384fc"
+                android:text="Resetear" />
+        </RelativeLayout>
+
     </LinearLayout>
-</LinearLayout>
+
+</RelativeLayout>
