--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,19 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
     <ImageView
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         android:paddingLeft="5dp"
         android:paddingTop="2dp"
         android:paddingRight="5dp"
         android:paddingBottom="2dp"
         android:src="@drawable/rayalarga" />
     <ImageView
-        android:id="@+id/imageView2"
-        android:layout_height="wrap_content"
+        android:id="@+id/fondo"
+        android:layout_height="match_parent"
         android:layout_width="wrap_content"
         android:layout_gravity="center_vertical"
+        android:alpha=".75"
         app:srcCompat="@drawable/quidditch" />
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,8 +27,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginRight="15dp"
         android:layout_marginBottom="5dp"
-        android:orientation="vertical"
-        android:weightSum="1">
+        android:orientation="vertical">
 
         <LinearLayout
             android:id="@+id/MainContainer"
@@ -47,10 +46,9 @@
                     android:id="@+id/TextoA"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentTop="false"
-                    android:layout_centerInParent="false"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="20dp"
+                    android:textSize="20dp"
                     android:text="Equipo A" />
 
                 <TextView
@@ -60,8 +58,7 @@
                     android:layout_below="@id/TextoA"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="25dp"
-                    android:textColor="#000"
-                    android:layout_marginBottom="25dp"
+                    android:layout_marginBottom="30dp"
                     android:text="0"
                     android:textSize="50dp" />
 
@@ -70,7 +67,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/PuntosA"
-                    android:layout_marginBottom="15dp"
+                    android:layout_marginBottom="20dp"
                     android:background="#0384fc"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
@@ -81,7 +78,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/DiezMasA"
-                    android:layout_marginBottom="15dp"
+                    android:layout_marginBottom="20dp"
                     android:background="#0384fc"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
@@ -92,7 +89,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/CincoMasA"
-                    android:layout_marginBottom="15dp"
                     android:background="#0384fc"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
@@ -110,10 +106,9 @@
                     android:id="@+id/TexoB"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentTop="false"
-                    android:layout_centerInParent="false"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="20dp"
+                    android:textSize="20dp"
                     android:text="Equipo B" />
 
                 <TextView
@@ -121,10 +116,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/TexoB"
-                    android:textColor="#000"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="25dp"
-                    android:layout_marginBottom="25dp"
+                    android:layout_marginBottom="30dp"
                     android:text="0"
                     android:textSize="50dp" />
 
@@ -134,7 +128,7 @@
                     android:layout_height="wrap_content"
                     android:background="#0384fc"
                     android:layout_below="@id/PuntosB"
-                    android:layout_marginBottom="15dp"
+                    android:layout_marginBottom="20dp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
                     android:text="+10 PUNTOS" />
@@ -144,7 +138,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/DiezMasB"
-                    android:layout_marginBottom="15dp"
+                    android:layout_marginBottom="20dp"
                     android:background="#0384fc"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
@@ -156,7 +150,6 @@
                     android:layout_height="wrap_content"
                     android:background="#0384fc"
                     android:layout_below="@id/CincoMasB"
-                    android:layout_marginBottom="15dp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
                     android:text="SNITCH DORADA" />
@@ -175,10 +168,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:layout_centerVertical="true"
-                android:layout_gravity="center"
                 android:background="#0384fc"
-                android:text="Resetear" />
+                android:text="Reset" />
         </RelativeLayout>
 
     </LinearLayout>
