--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -23,146 +27,136 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="5dp"
-        android:orientation="vertical">
-
-        <LinearLayout
-            android:id="@+id/MainContainer"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight=".15"
-            android:orientation="horizontal">
-
-            <RelativeLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight=".5"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/TextoA"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="20dp"
-                    android:textSize="20dp"
-                    android:text="Equipo A" />
-
-                <TextView
-                    android:id="@+id/PuntosA"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/TextoA"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="25dp"
-                    android:layout_marginBottom="30dp"
-                    android:text="0"
-                    android:textSize="50dp" />
-
-                <Button
-                    android:id="@+id/DiezMasA"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/PuntosA"
-                    android:layout_marginBottom="20dp"
-                    android:background="#0384fc"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
-                    android:text="+10 PUNTOS" />
-
-                <Button
-                    android:id="@+id/CincoMasA"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/DiezMasA"
-                    android:layout_marginBottom="20dp"
-                    android:background="#0384fc"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
-                    android:text="+5 PUNTOS" />
-
-                <Button
-                    android:id="@+id/snitchA"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/CincoMasA"
-                    android:background="#0384fc"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
-                    android:text="SNITCH DORADA" />
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight=".5"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/TexoB"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="20dp"
-                    android:textSize="20dp"
-                    android:text="Equipo B" />
-
-                <TextView
-                    android:id="@+id/PuntosB"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/TexoB"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="25dp"
-                    android:layout_marginBottom="30dp"
-                    android:text="0"
-                    android:textSize="50dp" />
-
-                <Button
-                    android:id="@+id/DiezMasB"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="#0384fc"
-                    android:layout_below="@id/PuntosB"
-                    android:layout_marginBottom="20dp"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
-                    android:text="+10 PUNTOS" />
-
-                <Button
-                    android:id="@+id/CincoMasB"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/DiezMasB"
-                    android:layout_marginBottom="20dp"
-                    android:background="#0384fc"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
-                    android:text="+5 PUNTOS" />
-
-                <Button
-                    android:id="@+id/snitchB"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="#0384fc"
-                    android:layout_below="@id/CincoMasB"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
-                    android:text="SNITCH DORADA" />
-            </RelativeLayout>
-        </LinearLayout>
-
+        android:orientation="vertical"
+        android:weightSum="1">
         <RelativeLayout
-            android:id="@+id/MainButtonContainer"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight=".85"
-            android:orientation="vertical">
+            android:layout_height="0dp"
+            android:layout_weight="0.75">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:weightSum="1">
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.5">
+                    <TextView
+                        android:id="@+id/TextoA"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="20dp"
+                        android:textSize="20dp"
+                        android:text="Equipo A" />
 
+                    <TextView
+                        android:id="@+id/PuntosA"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/TextoA"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="25dp"
+                        android:layout_marginBottom="30dp"
+                        android:text="0"
+                        android:textSize="50dp" />
+
+                    <Button
+                        android:id="@+id/DiezMasA"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/PuntosA"
+                        android:layout_marginBottom="20dp"
+                        android:background="#0384fc"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp"
+                        android:text="+10 PUNTOS" />
+
+                    <Button
+                        android:id="@+id/CincoMasA"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/DiezMasA"
+                        android:layout_marginBottom="20dp"
+                        android:background="#0384fc"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp"
+                        android:text="+5 PUNTOS" />
+
+                    <Button
+                        android:id="@+id/snitchA"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/CincoMasA"
+                        android:background="#0384fc"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp"
+                        android:text="SNITCH DORADA" />
+                </RelativeLayout>
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.5">
+                    <TextView
+                        android:id="@+id/TexoB"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="20dp"
+                        android:textSize="20dp"
+                        android:text="Equipo B" />
+
+                    <TextView
+                        android:id="@+id/PuntosB"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/TexoB"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="25dp"
+                        android:layout_marginBottom="30dp"
+                        android:text="0"
+                        android:textSize="50dp" />
+
+                    <Button
+                        android:id="@+id/DiezMasB"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="#0384fc"
+                        android:layout_below="@id/PuntosB"
+                        android:layout_marginBottom="20dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp"
+                        android:text="+10 PUNTOS" />
+
+                    <Button
+                        android:id="@+id/CincoMasB"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/DiezMasB"
+                        android:layout_marginBottom="20dp"
+                        android:background="#0384fc"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp"
+                        android:text="+5 PUNTOS" />
+
+                    <Button
+                        android:id="@+id/snitchB"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="#0384fc"
+                        android:layout_below="@id/CincoMasB"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp"
+                        android:text="SNITCH DORADA" />
+                </RelativeLayout>
+            </LinearLayout>
+
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.25">
             <Button
                 android:id="@+id/Resetear"
                 android:layout_width="wrap_content"
@@ -171,7 +165,7 @@
                 android:background="#0384fc"
                 android:text="Reset" />
         </RelativeLayout>
-
     </LinearLayout>
-
 </RelativeLayout>
+
+</LinearLayout>
